--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "sass": "^1.34.0",
+        "sass-loader": "^11.1.1"
     }
 }
